--- a/MicroRabbit/MicroRabbit.Infra.IOC/MicroRabbit.Infra.IOC.csproj
+++ b/MicroRabbit/MicroRabbit.Infra.IOC/MicroRabbit.Infra.IOC.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Infrastructure.Bus\MicroRabbit.Infrastructure.Bus.csproj" />
+  </ItemGroup>
+
 </Project>
